--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
+    background: url(../media/bg.png);
+    background-size: cover;
+    background-position: center;
 }
 
 #course{
