updating the video + add gif images

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,16 @@ body{
     background-position: center;
 }
 
+.caption{
+    position: absolute;
+    top: 88%;
+    width: 100%;
+}
+
+.caption img{
+    height: 60px;
+}
+
 #course{
     font-family: 'Poppins', sans-serif;
 }
